--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="search" />
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
               </form>
-              <button class="navbar-shop btn btn-outline-success my-2 my-sm-0"><i class="fas fa-shopping-cart"></i></button>
+              <button class="navbar-shop btn btn-outline-success my-2 my-sm-0">
+                <i class="fas fa-shopping-cart"></i><span class="navbar-shop__cart-counter" id="cart-counter-label" style="display: none">0</span>
+              </button>
             </div>
           </nav>
         </div>
@@ -477,6 +479,6 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/popper.js/dist/umd/popper.min.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
